--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <!-- Metadatos del documento -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Landing page" />
+        <meta name="author" content="Caroline Sada" />
         <title>Asesoria Financiera</title>
-        <!-- Icon que se mostrará en la parte superior de la pestaña del navegador-->
+
+        <!-- Icono que se mostrará en la parte superior de la pestaña del navegador-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
         <!-- Fuentes de Google-->
@@ -26,10 +28,10 @@
             <!-- Menú de navegación-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+
                         <!-- Enlaces a las demas paginas -->
                             <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>                    
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contactame</a></li>
@@ -37,15 +39,12 @@
                     </div>
                 </div>
             </nav>
-
-
-            <!-- Titulo-->
             <header class="py-5">
                 <div class="container px-5 pb-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-xxl-5">
 
-                            <!-- Presentación-->
+                            <!-- Información de presentación-->
                             <div class="text-center text-xxl-start">
                                 <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">gestion financiera &middot; liderazgo &middot; organizacion</div></div>
                                 <div class="fs-3 fw-light text-muted">Puedo enseñarte a</div>
@@ -203,7 +202,8 @@
                 </div>
             </section>
         </main>
-        <!-- Footer-->
+        
+        <!-- Pie de pagina-->
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
